--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -7,6 +7,8 @@
     <item name="colorAccent">@color/appColor</item>
     <item name="android:buttonStyle">@style/buttonStyle</item>
     <item name="buttonStyle">@style/buttonStyle</item>
+    <item name="windowActionBar">false</item>
+    <item name="windowNoTitle">true</item>
   </style>
 
   <style name="buttonStyle"
