--- a/android/app/src/main/res/layout/activity_example.xml
+++ b/android/app/src/main/res/layout/activity_example.xml
@@ -21,6 +21,14 @@
       android:id="@+id/et_rtp_url"
       />
 
+  <TextView
+      android:id="@+id/tv_countdown"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_centerInParent="true"
+      android:textSize="60sp"
+      android:textColor="@color/appColor"/>
+
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
@@ -31,24 +39,16 @@
       >
 
     <Button
-        android:text="@string/start_record"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="5dp"
-        android:id="@+id/b_record"
-        />
-
-    <Button
         android:text="@string/start_button"
-        android:layout_width="wrap_content"
+        android:layout_width="120dp"
         android:layout_height="wrap_content"
-        android:layout_marginRight="5dp"
+        android:layout_marginRight="40dp"
         android:id="@+id/b_start_stop"
         />
 
     <Button
         android:text="@string/switch_camera_button"
-        android:layout_width="wrap_content"
+        android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:id="@+id/switch_camera"
         />
