--- a/android/app/src/main/res/layout/activity_signup.xml
+++ b/android/app/src/main/res/layout/activity_signup.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/colorAccent">
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -18,13 +19,16 @@
             android:layout_marginTop="70dp"
             android:layout_gravity="center"
             android:text="@string/action_sign_up"
-            android:textSize="30sp" />
+            android:textSize="30sp"
+            android:textColor='@color/appColor' />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="90dp"
-            android:text="@string/prompt_email" />
+            android:text="@string/prompt_email"
+            android:textSize="18sp"
+            android:textColor='@color/appColor' />
 
         <EditText
             android:id="@+id/etSignupEmail"
@@ -37,7 +41,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="60dp"
-            android:text="@string/prompt_name" />
+            android:text="@string/prompt_name"
+            android:textSize="18sp"
+            android:textColor='@color/appColor' />
 
         <EditText
             android:id="@+id/etSignupName"
@@ -50,7 +56,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="60dp"
-            android:text="@string/prompt_password" />
+            android:text="@string/prompt_password"
+            android:textSize="18sp"
+            android:textColor='@color/appColor' />
 
         <EditText
             android:id="@+id/etSignupPassword"
@@ -61,7 +69,7 @@
 
         <Button
             android:id="@+id/buttonRegister"
-            android:layout_width="100dp"
+            android:layout_width="120dp"
             android:layout_height="40dp"
             android:layout_marginTop="80dp"
             android:layout_gravity="center"
