--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <color name="appColor">#e74c3c</color>
+  <color name="appColor">#42a5f5</color>
+  <color name="colorPrimaryDark">#0077c2</color>
+  <color name="colorAccent">#eeffff</color>
   <color name="black">#000000</color>
   <color name="white">#ffffff</color>
+  <color name="red">#f44336</color>
 </resources>
