--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -1,14 +1,12 @@
 <resources>
 
   <style name="AppTheme"
-      parent="Theme.AppCompat.Light.DarkActionBar">
+      parent="Theme.MaterialComponents.DayNight.NoActionBar">
     <item name="colorPrimary">@color/appColor</item>
-    <item name="colorPrimaryDark">@color/appColor</item>
-    <item name="colorAccent">@color/appColor</item>
+    <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+    <item name="colorAccent">@color/colorAccent</item>
     <item name="android:buttonStyle">@style/buttonStyle</item>
     <item name="buttonStyle">@style/buttonStyle</item>
-    <item name="windowActionBar">false</item>
-    <item name="windowNoTitle">true</item>
   </style>
 
   <style name="buttonStyle"
