--- a/android/app/src/main/res/layout/activity_main.xml
+++ b/android/app/src/main/res/layout/activity_main.xml
@@ -46,4 +46,11 @@
       android:layout_marginTop="40dp"
       android:text="@string/start_evaluation" />
 
+  <Button
+      android:id="@+id/buttonCheck"
+      android:layout_width="140dp"
+      android:layout_height="40dp"
+      android:layout_marginTop="20dp"
+      android:text="@string/start_check" />
+
 </LinearLayout>
